# keystone-ECE382N

./: .gitignore  buildnote.md  clean-stale.sh  env.sh
examples/: CMakeLists.txt
examples/attest-connect/: CMakeLists.txt
examples/attest-connect/attest_main/eapp/: workload.c
examples/attest-connect/attest_main/host/: host.cpp  verifier.cpp  verifier.h
examples/attest-connect/attest_sensor/eapp/: peripheral.c
examples/attestation/eapp/: attestor.c
examples/attestation/host/: host.cpp  host.h
examples/hello/eapp/: hello.c
examples/hello/host/: host.cpp
examples/host_write/: CMakeLists.txt
examples/host_write/eapp/: host_write.c
examples/host_write/host/: host.cpp
examples/peripheral/: CMakeLists.txt
examples/receiver/: CMakeLists.txt
examples/receiver/eapp/: receiver.c
examples/receiver/host/: host.cpp
examples/sender/: CMakeLists.txt
examples/sender/eapp/: sender.c
examples/sender/host/: host.cpp
examples/tests/attestation/: attestation.c
examples/workload/: CMakeLists.txt
examples/workload-peripheral/: CMakeLists.txt
examples/workload-peripheral/peripheral/host/: host.cpp
examples/workload-peripheral/workload/eapp/: workload.c
examples/workload-peripheral/workload/host/: host.cpp
linux-keystone-driver/: keystone-enclave.c  keystone-ioctl.c  keystone-page.c  keystone-sbi.c  keystone-sbi.h  keystone.h
runtime/call/: sbi.c  syscall.c
runtime/include/call/: sbi.h
runtime/include/mm/: vm_defs.h
runtime/loader-binary/: loader-binary.c  loader.S
sdk/include/app/: syscall.h
sdk/include/host/: Enclave.hpp  Error.hpp  KeystoneDevice.hpp  Memory.hpp  Params.hpp  keystone_user.h
sdk/include/shared/: eyrie_call.h  keystone_user.h  sm_call.h
sdk/include/verifier/: Report.hpp
sdk/src/app/: syscall.c
sdk/src/host/: Enclave.cpp  KeystoneDevice.cpp  PhysicalEnclaveMemory.cpp
sdk/src/verifier/: Report.cpp
sm/src/: attest.c  enclave.c  enclave.h  sm-sbi-opensbi.c  sm-sbi.c  sm-sbi.h
